downward-api-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downward-api-pod-env
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'env && sleep 3600']
