downward-api-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downward-api-pod-vol-file
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'cat /etc/downward/* && sleep 3600']
    volumeMounts:
    - name: podinfo
      mountPath: /etc/downward
  volumes:
    - name: podinfo
      downwardAPI:
        items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
          - path: "annotations"
            fieldRef:
              fieldPath: metadata.annotations
