mysql-hs.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql-ha
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
