httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: app1-ns
spec:
  parentRefs:
  - name: nginx-gw
    namespace: nginx-gateway
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /iphone
    backendRefs:
    - name: iphone-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /android
    backendRefs:
    - name: android-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: desktop-svc
      port: 80
